add sass styles in partials

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
   </header>
   <div class="formbox">
-      <form class="searchbox js_form">
+      <form class="formbox__searchbox js_form">
           <fieldset class="fieldset">
               <input class="inputSearch js_search" type="text" name="search" id="search" placeholder=" Ej: Walter White">
               <select name="status" id="status" class="js_status statusselect">
@@ -43,16 +43,15 @@
   </div>
   <main class="page__main">
       <div class="superbigbox">
-
-          <div class="superbigbox__fav">
+          <div>
               <section class="data js-data">
-                  <h2 class="title titlefav">Favorites ❤︎</h2>
-                  <ul class="listfav js-favorite-list">
+                  <h2 class="superbigbox__title titlefav">Favorites ❤︎</h2>
+                  <ul class="list__fav js-favorite-list">
               </section>
           </div>
-          <div class="superbigbox__ch">
+          <div>
               <section class="data js-data">
-                  <h1 class="title titlech">Characters</h1>
+                  <h1 class="superbigbox__title titlech">Characters</h1>
                   <ul class="list js_character_list">
                   </ul>
               </section>
