improve remove favs

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <div class="formbox">
       <form class="searchbox js_form">
           <fieldset class="fieldset">
-              <input class="inputSearch js_search" type="text" name="search" id="search" placeholder=" Ej: Walter White">
+              <input class="inputSearch js_search" type="text" name="search" id="search" placeholder=" Ex: Walter White">
               <select name="status" id="status" class="js_status statusselect">
                   <option value="All">All</option>
                   <option value="Alive">Alive</option>
@@ -65,7 +65,7 @@
   <footer class="page__footer">
       <p class="footer">Breaking Bad is regarded as one of the greates television series of all time, and with 16
           Primetime Emmy Awards
-          &copy Adalab 2022</p>
+          &copy Marta Castrillo 2022</p>
   </footer>
 
   <script src="./assets/js/main.js"></script>
