--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Breaking Bad</title>
+  <link rel="icon" type="image/png" href="./assets/images/e59f9c0f7bc8b14d0659aaf4977bdb13.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
