add evaluation exs

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
       </span>
   </div>
   <main class="page__main">
+      <p class="js_search_result"></p>
       <div class="superbigbox">
           <div>
               <section class="data js-data">
